# real_time_chat

./: pyproject.toml
src/: client.py  server.py  views.py
