[tool.poetry]
name = "real-time-chat"
version = "0.1.0"
description = ""
authors = ["Andre Luis Azevedo Ramalho - PrestServ <andreramalho.prestserv@petrobras.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
